# sw-renderer-2

./: CMakeLists.txt  README.md  app.cpp  app.hpp  camera.cpp  camera.hpp  depthbuffer.cpp  depthbuffer.hpp  framebuffer.hpp  g_line.c  gamecontroller.cpp  gamecontroller.hpp  line.cpp  line.hpp  log.hpp  main.cpp  mesh.cpp  mesh.hpp  meshwelder.cpp  meshwelder.hpp  sdlrenderer.cpp  sdlrenderer.hpp  sdltexture.cpp  sdltexture.hpp  sdlwindow.cpp  sdlwindow.hpp  teapot.hpp  triangle.cpp  triangle.hpp
cmake/: vcpkg_dependencies.cmake
